# kegg-mcp-server-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml  release-mcpb.yml
skills/kegg-analysis/: SKILL.md
src/kegg_mcp_server/: __init__.py  __main__.py  cache.py  client.py  errors.py  logging.py  parsers.py  prompts.py  resources.py  sanitize.py  server.py  validators.py
src/kegg_mcp_server/ascii/: __init__.py  chain.py  grid.py  kgml.py
src/kegg_mcp_server/models/: __init__.py  ascii.py  brite.py  common.py  compound.py  disease.py  drug.py  enzyme.py  errors.py  gene.py  glycan.py  module.py  organism.py  orthology.py  pathway.py  reaction.py
src/kegg_mcp_server/tools/: __init__.py  _common.py  ascii_pathway.py  brite.py  compounds.py  cross_db.py  database.py  diseases.py  drugs.py  enzymes.py  genes.py  glycans.py  modules.py  orthology.py  pathways.py  reactions.py
tests/: conftest.py  test_ascii_chain.py  test_ascii_grid.py  test_cache.py  test_client.py  test_errors.py  test_kgml_parser.py  test_logging.py  test_models_brite_compat.py  test_parsers.py  test_pathways_tool.py  test_render_pathway_tool.py  test_resources_and_prompts.py  test_sanitize.py  test_summary.py  test_tools_registration.py  test_validators.py  test_versioning.py
tests/fixtures/: compound_entry.txt  gene_entry.txt  pathway_entry.txt  tab_list.txt
tests/fixtures/kgml/: empty.xml  hsa00010_sample.xml  signaling_only.xml
