[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kegg-mcp-server"
version = "0.1.0"
description = "MCP server for the KEGG bioinformatics database REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Elytron Biotech" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "kegg",
    "bioinformatics",
    "pathways",
    "genomics",
    "metabolomics",
    "systems-biology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[project.scripts]
kegg-mcp-server = "kegg_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/elytron-biotech/kegg-mcp-server"
Repository = "https://github.com/elytron-biotech/kegg-mcp-server"
Issues = "https://github.com/elytron-biotech/kegg-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kegg_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
