[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kegg-mcp-server"
dynamic = ["version"]
description = "MCP server for the KEGG bioinformatics database REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lucas Servi" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "kegg",
    "bioinformatics",
    "pathways",
    "genomics",
    "metabolomics",
    "systems-biology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp>=1.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "cachetools>=5.3",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
kegg-mcp-server = "kegg_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/Lucas-Servi/kegg-mcp-server-python"
Repository = "https://github.com/Lucas-Servi/kegg-mcp-server-python"
Issues = "https://github.com/Lucas-Servi/kegg-mcp-server-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kegg_mcp_server"]

[tool.hatch.version]
path = "src/kegg_mcp_server/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=kegg_mcp_server --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src/kegg_mcp_server"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
